[gd_scene load_steps=22 format=3 uid="uid://dshgcbnruliwk"]

[ext_resource type="Script" path="res://entities/enemies/flower_enemy.gd" id="1_qk1bn"]
[ext_resource type="Texture2D" uid="uid://dt5f4lwj2e1f3" path="res://assets/enemies/death 32x32.png" id="2_ou3vd"]
[ext_resource type="Texture2D" uid="uid://rjemfmnbloyr" path="res://assets/enemies/move 32x32.png" id="3_edywm"]
[ext_resource type="PackedScene" uid="uid://8qqafthmvonk" path="res://overlaps/hurt_box.tscn" id="4_xjsq4"]

[sub_resource type="AtlasTexture" id="AtlasTexture_q6kda"]
atlas = ExtResource("2_ou3vd")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q2khk"]
atlas = ExtResource("2_ou3vd")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5li16"]
atlas = ExtResource("2_ou3vd")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kj01s"]
atlas = ExtResource("2_ou3vd")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k8qwx"]
atlas = ExtResource("3_edywm")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fs4nq"]
atlas = ExtResource("3_edywm")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5tuw1"]
atlas = ExtResource("3_edywm")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sm6hf"]
atlas = ExtResource("3_edywm")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ds3cy"]
atlas = ExtResource("3_edywm")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kp1gb"]
atlas = ExtResource("3_edywm")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ju7eq"]
atlas = ExtResource("3_edywm")
region = Rect2(0, 128, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ub5t0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q6kda")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q2khk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5li16")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kj01s")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"hit",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k8qwx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fs4nq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k8qwx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k8qwx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k8qwx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k8qwx")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5tuw1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sm6hf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ds3cy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kp1gb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ju7eq")
}],
"loop": true,
"name": &"move",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dwsri"]
size = Vector2(6, 5)

[sub_resource type="CircleShape2D" id="CircleShape2D_dq8wh"]
radius = 40.0125

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vhlka"]
size = Vector2(6, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_70vh3"]
size = Vector2(6, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x7fte"]
size = Vector2(10, 3)

[node name="FlowerEnemy" type="CharacterBody2D"]
script = ExtResource("1_qk1bn")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -16)
sprite_frames = SubResource("SpriteFrames_ub5t0")
animation = &"death"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -2.5)
shape = SubResource("RectangleShape2D_dwsri")

[node name="PlayerDetection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
modulate = Color(0.886275, 0.211765, 0.568627, 1)
shape = SubResource("CircleShape2D_dq8wh")

[node name="HurtBox" parent="." instance=ExtResource("4_xjsq4")]

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2(0, -4)
shape = SubResource("RectangleShape2D_vhlka")

[node name="PlayerDeath" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDeath"]
position = Vector2(0, -4)
shape = SubResource("RectangleShape2D_70vh3")

[node name="PlayerCollision" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerCollision"]
position = Vector2(0, -1.5)
shape = SubResource("RectangleShape2D_x7fte")

[connection signal="body_entered" from="PlayerDetection" to="." method="_on_player_detection_body_entered"]
[connection signal="body_exited" from="PlayerDetection" to="." method="_on_player_detection_body_exited"]
[connection signal="body_entered" from="PlayerDeath" to="." method="_on_player_death_body_entered"]
[connection signal="body_entered" from="PlayerCollision" to="." method="_on_player_collision_body_entered"]

[editable path="HurtBox"]
